<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="55dp"
            android:layout_height="19dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="9dp"
                    android:background="@color/colorBeer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_title1"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="19dp"
            android:text="@string/setting_version"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="17dp"
            android:layout_marginLeft="35dp"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_intro"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_service"
            android:textSize="18dp" />


        <Button
            android:id="@+id/btn_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="17dp"
            android:layout_marginLeft="35dp"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_policy"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/colorBtnGray" />

        <FrameLayout
            android:layout_width="55dp"
            android:layout_height="19dp"
            android:layout_marginVertical="19dp"
            android:layout_marginLeft="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="9dp"
                    android:background="@color/colorBeer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_title2"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_profile"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="17dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_card"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/colorBtnGray" />

        <FrameLayout
            android:layout_width="95dp"
            android:layout_height="19dp"
            android:layout_marginVertical="19dp"
            android:layout_marginLeft="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="9dp"
                    android:background="@color/colorBeer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_title3"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_logout"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="17dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/setting_delete"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            android:background="@drawable/back_rect_black2"
            android:elevation="@null"
            android:paddingHorizontal="26dp"
            android:paddingVertical="9dp"
            android:text="@string/setting_friend"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorBeer"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/setting_right"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>