<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_setting_profile"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <ImageButton
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="bottom|right"
                android:background="@drawable/back_circle_gray"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_edit_24dp" />
        </FrameLayout>

        <EditText
            android:id="@+id/edit_setting_name"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/setting_name"
            android:singleLine="true"
            android:theme="@style/EditTextStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginVertical="20dp"
            android:background="@color/colorBtnGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/setting_state"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_setting_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_setting_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_state_msg"
                android:inputType="text"
                android:theme="@style/EditTextStyle" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="9dp"
            android:text="@string/setting_label"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="28dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/setting_label_msg"
            android:textColor="@android:color/black" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:columnCount="2"
            android:rowCount="2">

            <Button
                android:id="@+id/btn_label_beer"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:width="120dp"
                android:height="56dp"
                android:background="@drawable/back_dash"
                android:drawableRight="@drawable/ic_plus"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/label"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_label_soju"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:width="120dp"
                android:height="56dp"
                android:background="@drawable/back_dash"
                android:drawableRight="@drawable/ic_plus"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/label"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_label_wine"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_marginBottom="30dp"
                android:width="120dp"
                android:height="56dp"
                android:background="@drawable/back_dash"
                android:drawableRight="@drawable/ic_plus"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/label"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_label_makgeolli"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:width="120dp"
                android:height="56dp"
                android:background="@drawable/back_dash"
                android:drawableRight="@drawable/ic_plus"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/label"
                android:textAllCaps="false" />
        </GridLayout>

    </LinearLayout>
</ScrollView>