<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_share_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_close" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_dialog_card"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@android:color/white">

        <View
            android:id="@+id/view_card_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBeer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_rect_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_card_msg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_card_msg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:layout_marginLeft="27dp"
                android:background="@android:color/white"
                android:text="@string/main_msg2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_card_msg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:background="@android:color/transparent"
                android:text="@string/main_msg3"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_main_drink"
            android:layout_width="104dp"
            android:layout_height="139dp"
            android:layout_gravity="right|bottom"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="18dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/img_beer" />

        <TextView
            android:id="@+id/tv_share_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_share_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_dialog_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/share_msg"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_share_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_share_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        android:text="@string/share_intro"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_share_intro"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layout_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_download"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/back_circle_black3"
                android:src="@drawable/ic_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/share_download"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/layout_download"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_share_kakao"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/layout_download"
                android:background="@drawable/back_circle_black3"
                android:src="@drawable/ic_kakao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/share_kakao"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>