<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
  
    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="19dp"
        android:text="@string/main_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_main_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_main_title"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="36dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_settings_24dp"
        android:paddingLeft="10dp"
        android:text="@string/all_setting"
        android:textSize="12sp" />

    <FrameLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_setting"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_main_intro"
            android:layout_width="wrap_content"
            android:layout_height="330dp" />

        <ImageView
            android:id="@+id/iv_main_profile"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="56dp"
            android:background="@drawable/back_circle_black2"
            android:scaleType="fitCenter"
            android:src="@drawable/test" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_profile"
        android:layout_marginHorizontal="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="유우미"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_main_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@color/colorBeer"
            android:textColor="@android:color/black"
            android:textSize="9sp"
            tools:text="BEER 0.3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="23dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_name"
            android:layout_marginRight="12dp"
            android:text="맥주는 역시 튀긴 감자랑 함께해야지"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btn_main_edit"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_toRightOf="@id/tv_main_intro"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_edit_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_intro"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="40dp"
        android:layout_toLeftOf="@id/layout_calendar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_main_capacity"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:background="@drawable/back_circle_black"
            android:src="@drawable/ic_edit_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/all_add_capacity"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_intro"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_main_calendar"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:background="@drawable/back_circle_black"
            android:src="@drawable/ic_edit_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/all_calendar"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_intro"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/layout_calendar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_main_wiki"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:background="@drawable/back_circle_black"
            android:src="@drawable/ic_edit_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/all_wiki"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
